feat : 매너온도 패키지 초안 생성